Fix for Bug #26757: session.save_path default is bogus for win32 Based on a patch found in the bug report. Concept approved by Ilia.