main/php_open_temporary_file.h
@@ -21,5 +21,6 @@
 
 PHPAPI FILE *php_open_temporary_file(const char *dir, const char *pfx, char **opened_path_p TSRMLS_DC);
 PHPAPI int php_open_temporary_fd(const char *dir, const char *pfx, char **opened_path_p TSRMLS_DC);
+PHPAPI const char* php_get_temporary_directory(void);
 
 #endif /* PHP_OPEN_TEMPORARY_FILE_H */
